6.cert-manager/domain-based-ssl/vault-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt"
  name: vault
  namespace: vault
spec:
  rules:
  - host: vault.simplifydevopstools.com
    http:
      paths:
      - backend:
          service:
            name: vault-ui
            port:
              number: 8200
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - vault.simplifydevopstools.com
    secretName: vault.simplifydevopstools-secret
